[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/entities/fps/Label.tscn" type="PackedScene" id=1]
[ext_resource path="res://tilemaps/tilemap.tres" type="TileSet" id=2]
[ext_resource path="res://scenes/entities/player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/entities/finish/Finish.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprites/finish.png" type="Texture" id=5]
[ext_resource path="res://scenes/entities/turret/Turret.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/entities/start/Start.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/levels/plot_levels/Level.gd" type="Script" id=8]
[ext_resource path="res://tilemaps/ТАЙЛЫ новые — копия.png" type="Texture" id=9]
[ext_resource path="res://scenes/entities/torch/Torch.tscn" type="PackedScene" id=10]
[ext_resource path="res://sprites/gun.png" type="Texture" id=11]
[ext_resource path="res://sprites/background2.png" type="Texture" id=12]
[ext_resource path="res://sprites/good guy.png" type="Texture" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 110, 10.5 )

[sub_resource type="TileSet" id=2]
0/name = "ТАЙЛЫ новые — копия.png 0"
0/texture = ExtResource( 9 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 64, 16, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "ТАЙЛЫ новые — копия.png 1"
1/texture = ExtResource( 9 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 112, 16, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "ТАЙЛЫ новые — копия.png 2"
2/texture = ExtResource( 9 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "ТАЙЛЫ новые — копия.png 3"
3/texture = ExtResource( 9 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 80, 0, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[node name="Level1" type="Node2D"]
script = ExtResource( 8 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.0588235, 0.223529, 0.32549, 1 )
position = Vector2( 464, 312 )
scale = Vector2( 10.08, 43.2 )
texture = ExtResource( 5 )

[node name="Background2" type="Sprite" parent="."]
position = Vector2( 468.5, 314 )
scale = Vector2( 0.983398, 1.69141 )
texture = ExtResource( 12 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 720929, 8, 0, 720930, 8, 0, 720931, 8, 0, 720932, 8, 0, 720933, 8, 0, 720934, 8, 0, 720935, 8, 0, 720936, 8, 0, 720937, 8, 0, 786465, 8, 0, 786473, 8, 0, 852001, 8, 0, 852009, 8, 0, 917523, 8, 0, 917524, 8, 0, 917525, 8, 0, 917526, 8, 0, 917527, 8, 0, 917528, 8, 0, 917529, 8, 0, 917530, 8, 0, 917531, 8, 0, 917532, 8, 0, 917533, 8, 0, 917534, 8, 0, 917535, 8, 0, 917536, 8, 0, 917537, 8, 0, 917545, 8, 0, 983057, 8, 0, 983058, 8, 0, 983059, 8, 0, 983081, 8, 0, 1048593, 8, 0, 1048617, 8, 0, 1114129, 8, 0, 1114153, 8, 0, 1179665, 8, 0, 1179689, 8, 0, 1245201, 8, 0, 1245225, 8, 0, 1310737, 8, 0, 1310741, 8, 0, 1310742, 8, 0, 1310743, 8, 0, 1310744, 8, 0, 1310745, 8, 0, 1310746, 8, 0, 1310761, 8, 0, 1376272, 8, 0, 1376273, 8, 0, 1376277, 8, 0, 1376282, 8, 0, 1376297, 8, 0, 1441808, 8, 0, 1441813, 8, 0, 1441818, 8, 0, 1441833, 8, 0, 1507344, 8, 0, 1507349, 8, 0, 1507354, 8, 0, 1507369, 8, 0, 1572880, 8, 0, 1572885, 8, 0, 1572890, 8, 0, 1572891, 8, 0, 1572892, 8, 0, 1572893, 8, 0, 1572894, 8, 0, 1572895, 8, 0, 1572896, 8, 0, 1572897, 8, 0, 1572898, 8, 0, 1572899, 8, 0, 1572900, 8, 0, 1572901, 8, 0, 1572902, 8, 0, 1572903, 8, 0, 1572904, 8, 0, 1572905, 8, 0, 1638416, 8, 0, 1638421, 8, 0, 1703952, 8, 0, 1703953, 8, 0, 1703957, 8, 0, 1769489, 8, 0, 1769490, 8, 0, 1769491, 8, 0, 1769492, 8, 0, 1769493, 8, 0 )

[node name="Finish" parent="." instance=ExtResource( 4 )]
position = Vector2( 312, 430.428 )
scale = Vector2( 1.041, 1 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 504, 360 )

[node name="skin" type="Sprite" parent="Player"]
texture = ExtResource( 13 )

[node name="Turret" parent="." instance=ExtResource( 6 )]
position = Vector2( 424, 312 )
texture = ExtResource( 11 )
direction = Vector2( 1, 0 )
timerTime = 3
speed = 100

[node name="Start" parent="." instance=ExtResource( 7 )]
position = Vector2( 504, 382 )

[node name="toarchs" type="Node2D" parent="."]

[node name="torch" parent="toarchs" instance=ExtResource( 10 )]
position = Vector2( 432, 327 )

[node name="torch2" parent="toarchs" instance=ExtResource( 10 )]
position = Vector2( 656, 248 )
scale = Vector2( -1, 1 )

[node name="torch3" parent="toarchs" instance=ExtResource( 10 )]
position = Vector2( 288, 311 )

[node name="Node" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="Node"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" parent="Node/Control" instance=ExtResource( 1 )]

[node name="Spikes" type="Area2D" parent="."]

[node name="TileMap" type="TileMap" parent="Spikes"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
collision_use_parent = true
format = 1
tile_data = PoolIntArray( 786468, 1610612747, 0, 786469, 1610612747, 0, 786470, 1610612747, 0, 786471, 1610612747, 0, 786472, 1610612747, 0, 983062, 1610612747, 0, 983063, 1610612747, 0, 983064, 1610612747, 0, 983065, 1610612747, 0, 983066, 1610612747, 0, 983067, 1610612747, 0, 1048616, -1073741813, 0, 1114130, -1610612725, 0, 1114152, -1073741813, 0, 1179688, -1073741813, 0, 1245205, 11, 0, 1245206, 11, 0, 1245208, 11, 0, 1245209, 11, 0, 1245224, -1073741813, 0, 1310760, -1073741813, 0, 1441809, -1610612725, 0, 1507345, -1610612725, 0, 1507355, 11, 0, 1507356, 11, 0, 1507357, 11, 0, 1507361, 11, 0, 1507362, 11, 0, 1507363, 11, 0, 1507364, 11, 0, 1507365, 11, 0, 1572881, -1610612725, 0, 1638417, -1610612725, 0 )

[node name="EnemyTrigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyTrigger"]
position = Vector2( 544, 318.5 )
shape = SubResource( 1 )

[node name="EnemyPos" type="Position2D" parent="."]
position = Vector2( 376, 304 )

[node name="TileMap2" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 720929, 0, 0, 720930, 0, 0, 720931, 0, 0, 720932, 0, 0, 720933, 0, 0, 720934, 0, 0, 720935, 0, 0, 720936, 0, 0, 720937, 0, 0, 786465, 0, 0, 786468, 1610612737, 0, 786469, 1610612737, 0, 786470, 1610612737, 0, 786471, 1610612737, 0, 786472, 1610612737, 0, 786473, 0, 0, 852001, 0, 0, 852009, 0, 0, 917523, 0, 0, 917524, 0, 0, 917525, 0, 0, 917526, 0, 0, 917527, 0, 0, 917528, 0, 0, 917529, 0, 0, 917530, 0, 0, 917531, 0, 0, 917532, 0, 0, 917533, 0, 0, 917534, 0, 0, 917535, 0, 0, 917536, 0, 0, 917537, 0, 0, 917545, 0, 0, 983057, 0, 0, 983058, 0, 0, 983059, 0, 0, 983062, 1610612737, 0, 983063, 1610612737, 0, 983064, 1610612737, 0, 983065, 1610612737, 0, 983066, 1610612737, 0, 983067, 1610612737, 0, 983081, 0, 0, 1048593, 0, 0, 1048616, -1073741823, 0, 1048617, 0, 0, 1114129, 0, 0, 1114130, -1610612735, 0, 1114152, -1073741823, 0, 1114153, 0, 0, 1179665, 0, 0, 1179688, -1073741823, 0, 1179689, 0, 0, 1245201, 0, 0, 1245205, 1, 0, 1245206, 1, 0, 1245208, 1, 0, 1245209, 1, 0, 1245224, -1073741823, 0, 1245225, 0, 0, 1310737, 0, 0, 1310741, 0, 0, 1310742, 0, 0, 1310743, 0, 0, 1310744, 0, 0, 1310745, 0, 0, 1310746, 0, 0, 1310760, -1073741823, 0, 1310761, 0, 0, 1376272, 0, 0, 1376273, 0, 0, 1376277, 0, 0, 1376282, 0, 0, 1376297, 0, 0, 1441808, 0, 0, 1441809, -1610612735, 0, 1441813, 0, 0, 1441818, 0, 0, 1441833, 0, 0, 1507344, 0, 0, 1507345, -1610612735, 0, 1507349, 0, 0, 1507354, 0, 0, 1507355, 1, 0, 1507356, 1, 0, 1507357, 1, 0, 1507361, 1, 0, 1507362, 1, 0, 1507363, 1, 0, 1507364, 1, 0, 1507365, 1, 0, 1507369, 0, 0, 1572880, 0, 0, 1572881, -1610612735, 0, 1572885, 0, 0, 1572890, 0, 0, 1572891, 0, 0, 1572892, 0, 0, 1572893, 0, 0, 1572894, 0, 0, 1572895, 0, 0, 1572896, 0, 0, 1572897, 0, 0, 1572898, 0, 0, 1572899, 0, 0, 1572900, 0, 0, 1572901, 0, 0, 1572902, 0, 0, 1572903, 0, 0, 1572904, 0, 0, 1572905, 0, 0, 1638416, 0, 0, 1638417, -1610612735, 0, 1638421, 0, 0, 1703952, 0, 0, 1703953, 0, 0, 1703957, 0, 0, 1769489, 0, 0, 1769490, 0, 0, 1769491, 0, 0, 1769492, 0, 0, 1769493, 0, 0 )

[connection signal="body_entered" from="Spikes" to="." method="_on_Spikes_body_entered"]
[connection signal="body_entered" from="EnemyTrigger" to="." method="_on_EnemyTrigger_body_entered"]
